THRIFT-4648: Use correct namespace in type names Client: c_glib